Edited wiki page through web user interface.

--- a/wiki/WhySalve.wiki
+++ b/wiki/WhySalve.wiki
@@ -2,9 +2,9 @@
 Salve aims to fix the anemic domain model anti-pattern present in most modern java web-applications. 
 
 With technologies like ORM we are able to model domain layer objects that contain application data, but we are unable to enrich them with behavior to act upon that data. The behavior is factored out into stateless singleton objects called services. This is done for the following reasons:
-  * Dependency Management: Objects modeled by the domain layer depend on services provided by other parts of the application, such as jms/email/orm/database. It is much easier to provide these dependencies to an object whose lifecycle is managed by an IOC container rather then to one whose lifecycle is handled by the ORM framework or by the user using the `new` operator.
-  * Testability: The two concerns above can be addressed by allowing objects to lookup their dependencies inside methods (rather then keeping them as fields) via some sort of a static lookup. However this makes it more difficult to test the object because its dependencies are harder to discover and mocks are harder to pass in - compared to objects that use setter methods to set their dependencies.
-  * Instance weight: Domain layer objects need to be lightweight because they are often passed around between application layers/cluster nodes, and sometimes stored by the user for later reference. This often entails having the ability to be serializable which means these objects cannot carry references to heavy objects that would significantly increase their serialized-size, or carry references to objects that are not themselves serializable or should not be serialized - such as singletons.
+  * *Dependency Management*: Objects modeled by the domain layer depend on services provided by other parts of the application, such as jms/email/orm/database. It is much easier to provide these dependencies to an object whose lifecycle is managed by an IOC container rather then to one whose lifecycle is handled by the ORM framework or by the user using the `new` operator.
+  * *Testability*: The two concerns above can be addressed by allowing objects to lookup their dependencies inside methods (rather then keeping them as fields) via some sort of a static lookup. However this makes it more difficult to test the object because its dependencies are harder to discover and mocks are harder to pass in - compared to objects that use setter methods to set their dependencies.
+  * *Instance Weight*: Domain layer objects need to be lightweight because they are often passed around between application layers/cluster nodes, and sometimes stored by the user for later reference. This often entails having the ability to be serializable which means these objects cannot carry references to heavy objects that would significantly increase their serialized-size, or carry references to objects that are not themselves serializable or should not be serialized - such as singletons.
 
 == How Salve Fixes the Problem ==
 The ideal solution would allow domain layer objects to be lightweight, contain business logic, and have dependency injection that works under any lifecycle. One way to achieve this would be to allow the developer to specify dependencies as fields, and then rewrite the bytecode removing those fields from the class and replacing access to them via a static lookup into whatever IOC container/dependency management system the application is using when the application is deployed. Such a scheme would allow setter methods on those objects to set dependencies when the objects are under test and yet remove the weight of those fields when objects are deployed. This is how Salve works. Lets take a look at a quick example:
@@ -70,8 +70,8 @@ When the bytecode of Account class is processed by Salve, it will look like this
 }}}
 
 Lets take a look at the changes Salve made to the code:
-* EmailService email field is removed - removing a reference to a heavy service object and making Account lightweight
-* Writes to the email field are replaced with a noop and a WARN message in the logs. This can be configured to throw an exception instead
-* Reads of the email field are replaced with a static lookup into a method-local variable. For instructions on configuring Salve's DependencyLibrary lookups see [ConfiguringDependencyLibrary] page.
+  * EmailService email field is removed - removing a reference to a heavy service object and making Account lightweight
+  * Writes to the email field are replaced with a noop and a WARN message in the logs. This can be configured to throw an exception instead
+  * Reads of the email field are replaced with a static lookup into a method-local variable. For instructions on configuring Salve's DependencyLibrary lookups see [ConfiguringDependencyLibrary] page.
 
 For instructions on how to configure Salve code instrumentation see the [ConfiguringInstrumentation] page.
