Edited wiki page through web user interface.

--- a/wiki/WhySalve.wiki
+++ b/wiki/WhySalve.wiki
@@ -6,7 +6,7 @@ With technologies like ORM we are able to model domain layer objects that contai
   * *Testability*: The two concerns above can be addressed by allowing objects to lookup their dependencies inside methods (rather then keeping them as fields) via some sort of a static lookup. However this makes it more difficult to test the object because its dependencies are harder to discover and mocks are harder to pass in - compared to objects that use setter methods to set their dependencies.
   * *Instance Weight*: Domain layer objects need to be lightweight because they are often passed around between application layers/cluster nodes, and sometimes stored by the user for later reference. This often entails having the ability to be serializable which means these objects cannot carry references to heavy objects that would significantly increase their serialized-size, or carry references to objects that are not themselves serializable or should not be serialized - such as singletons.
 
-== How Salve Fixes the Problem ==
+=== How Salve Fixes the Problem ===
 The ideal solution would allow domain layer objects to be lightweight, contain business logic, and have dependency injection that works under any lifecycle. One way to achieve this would be to allow the developer to specify dependencies as fields, and then rewrite the bytecode removing those fields from the class and replacing access to them via a static lookup into whatever IOC container/dependency management system the application is using when the application is deployed. Such a scheme would allow setter methods on those objects to set dependencies when the objects are under test and yet remove the weight of those fields when objects are deployed. This is how Salve works. Lets take a look at a quick example:
 
 {{{
