--- a/wiki/ConfiguringInstrumentation.wiki
+++ b/wiki/ConfiguringInstrumentation.wiki
@@ -1,4 +1,5 @@
-#summary Instructions on how to configure Salve's bytecode postprocessing
+#summary Instructions on configuring Salve's bytecode postprocessing
+#labels Phase-Deploy
 
 == Java5+ JVM Agent ==
 === When ===
