Edited wiki page through web user interface.

--- a/wiki/WhySalve.wiki
+++ b/wiki/WhySalve.wiki
@@ -1,4 +1,6 @@
+#summary Motivation behind Salve
 #labels Featured,Phase-Requirements,Phase-Design
+
 Salve aims to fix the anemic domain model anti-pattern present in most modern java web-applications. 
 
 With technologies like ORM we are able to model domain layer objects that contain application data, but we are unable to enrich them with behavior to act upon that data. The behavior is factored out into stateless singleton objects called services. This is done for the following reasons:
@@ -72,6 +74,6 @@ When the bytecode of Account class is processed by Salve, it will look like this
 Lets take a look at the changes Salve made to the code:
   * `EmailService email` field is removed - removing a reference to a heavy service object and making `Account` lightweight
   * Writes to the `email` field are replaced with a noop and a WARN message in the logs. This can be configured to throw an exception instead
-  * Reads of the `email` field are replaced with a static lookup into a method-local variable. For instructions on configuring Salve's DependencyLibrary lookups see [ConfiguringDependencyLibrary] page.
+  * Reads of the `email` field are replaced with a static lookup into a method-local variable. For instructions on configuring Salve's ConfiguringDependencyLibrary lookups see [ConfiguringDependencyLibrary] page.
 
 For instructions on how to configure Salve code instrumentation see the [ConfiguringInstrumentation] page.
