--- a/wiki/ConfiguringInstrumentation.wiki
+++ b/wiki/ConfiguringInstrumentation.wiki
@@ -17,7 +17,36 @@ java ... -Djavaagent:~/.m2/repository/salve/salve-agent/1.0/salve-agent-1.0.jar
 }}}
 
 == Maven2 Build ==
-Coming soon
+=== When ===
+Best option when the project is using maven2 for builds and no java command line access is available for deployment.
+
+=== How ===
+Add the following lines to pom.xml
+
+{{{
+<build>
+  <plugins>
+    <plugin>
+      <groupId>salve</groupId>
+      <artifactId>salve-maven2</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <executions>
+        <execution>
+          <!--  if using maven 2.1 or above
+                use phase prepare-package instead
+          -->
+          <phase>test</phase>
+          <goals>
+          <goal>instrument</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
+</build>
+}}}
+
+Maven 2.0.x does not offer a good build-phase hook for processing class files after unit tests and before packaging, so we use the `test` phase which will execute the plugin after unit tests are done. In Maven 2.1.x we can use the new `prepare-package` phase.
 
 == Ant Build ==
 Coming soon
