Edited wiki page through web user interface.

--- a/wiki/BuildingSalve.wiki
+++ b/wiki/BuildingSalve.wiki
@@ -1,5 +1,5 @@
 #summary Instructions on building Salve from source code
-#labels Phase-Deploy
+#labels Phase-Deploy,Featured
 
   # install maven 2
   # svn checkout http://salve.googlecode.com/svn/trunk/ salve
