--- a/wiki/WhySalve.wiki
+++ b/wiki/WhySalve.wiki
@@ -26,7 +26,7 @@ The ideal solution would allow domain layer objects to be lightweight, contain b
   // this is a JPA field
   private float balance;
 
-  // setters and getters for email and balance, and id fields
+  // setters and getters for email, balance, and id fields
 
   public void withdraw(float amount) {
     if (amount>balance) {
@@ -53,7 +53,7 @@ When the bytecode of Account class is processed by Salve, it will look like this
 
   private float balance;
 
-  // setters and getters for email and balance, and id fields
+  // setters and getters for email, balance, and id fields
 
   // salve will rewrite field write in setter with a 
   // noop and a WARN log message
